--- a/web/index.html
+++ b/web/index.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
-<!--
-        json字段保持完整, 后期更新会向下兼容
-        可以自定义前端展示
-        ლ(•̀ _ •́ ლ)
-        ლ(•̀ _ •́ ლ)ლ(•̀ _ •́ ლ)
-        ლ(•̀ _ •́ ლ)ლ(•̀ _ •́ ლ)ლ(•̀ _ •́ ლ)
-        ლ(•̀ _ •́ ლ)ლ(•̀ _ •́ ლ)
-        ლ(•̀ _ •́ ლ)
--->
 <html>
 	<head>
-		<title>云监控</title>
+		<title>Server Status</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="云监控">
-		<meta name="author" content="BotoX">
+		<meta name="description" content="Server Status">
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="css/dark.css" title="dark">
 		<link rel="stylesheet" href="css/light.css" title="light">
+		<link rel="stylesheet" href="css/dark.css" title="dark">
 		<style>
 			body {
 				padding-top: 70px;
@@ -43,15 +33,15 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a href="#" class="navbar-brand">云监控</a>
+						<a href="#" class="navbar-brand">Server Status</a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
 							<li class="dropdown">
-								<a data-toggle="dropdown" class="dropdown-toggle" href="#">风格<b class="caret"></b></a>
+								<a data-toggle="dropdown" class="dropdown-toggle" href="#">Style<b class="caret"></b></a>
 								<ul class="dropdown-menu">
-									<li><a href="#" onclick="setActiveStyleSheet('dark')">黑夜</a></li>
-									<li><a href="#" onclick="setActiveStyleSheet('light')">白天</a></li>
+									<li><a href="#" onclick="setActiveStyleSheet('light')">Light</a></li>
+									<li><a href="#" onclick="setActiveStyleSheet('dark')">Dark</a></li>
 								</ul>
 							</li>
 						</ul>
@@ -68,10 +58,10 @@
 					</div>
 				</noscript>
 				<div class="progress progress-striped active">
-					<div class="progress-bar progress-bar-warning" style="width: 100%;">加载中...</div>
+					<div class="progress-bar progress-bar-warning" style="width: 100%;">Loading...</div>
 				</div>
 				<div style="text-align: center;">
-					如果出现此消息，请确保您已启用Javascript! <br />否则云监控主服务没启动或已关闭.
+					If this message doesn't disappear make sure that you have Javascript enabled.<br />Otherwise the status server is probably down.
 				</div>
 				<p></p>
 			</div>
@@ -79,17 +69,18 @@
 				<thead>
 				<tr>
 					<th id="status4" style="text-align: center;">IPv4</th>
-					<th id="ipstatus" style="text-align: center;">Flight</th>
-					<th id="name">节点名</th>
-					<th id="type">虚拟化</th>
-					<th id="location">位置</th>
-					<th id="uptime">在线时间</th>
-					<th id="load">负载</th>
-					<th id="network">网络 ↓|↑</th>
-					<th id="traffic">流量 ↓|↑</th>
-					<th id="cpu">处理器</th>
-					<th id="ram">内存</th>
-					<th id="hdd">硬盘</th>
+					<th id="status6" style="text-align: center;">IPv6</th>
+					<th id="ipstatus" style="text-align: center;">To China</th>
+					<th id="name">Name</th>
+					<th id="type">Type</th>
+					<th id="host">Host</th>
+					<th id="location">Location</th>
+					<th id="uptime">Uptime</th>
+					<th id="load">Load</th>
+					<th id="network">Network ↓|↑</th>
+					<th id="traffic">CPU ↓|↑</th>
+					<th id="cpu">RAM</th>
+					<th id="hdd">HDD</th>
 				</tr>
 				</thead>
 				<tbody id="servers">
@@ -102,7 +93,7 @@
 
 		<div class="container">
 			<p style="text-align: center; font-size: 10px;">
-				<a href="https://github.com/cppla/ServerStatus">ServerStatus中文版</a>
+				Based on <a href="https://github.com/shell-script/ServerStatus">ServerStatus</a>.
 			</p>
 		</div>
 		<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
