--- a/web/index.html
+++ b/web/index.html
@@ -78,7 +78,7 @@
 					<th id="uptime">Uptime</th>
 					<th id="load">Load</th>
 					<th id="network">Network ↓|↑</th>
-					<th id="cpu">CPU ↓|↑</th>
+					<th id="cpu">CPU</th>
 					<th id="memory">RAM</th>
 					<th id="hdd">HDD</th>
 				</tr>
