Remove IPv6&Host, add message bar.

--- a/web/index.html
+++ b/web/index.html
@@ -49,7 +49,9 @@
 				</div>
 			</div>
 		</div>
-
+		<div class="container announcement">
+			<p><a href="#">Server Status</a> | Some message you want to show.</p>
+		</div>
 		<div class="container content">
 			<div id="loading-notice">
 				<noscript>
@@ -69,11 +71,9 @@
 				<thead>
 				<tr>
 					<th id="status4" style="text-align: center;">IPv4</th>
-					<th id="status6" style="text-align: center;">IPv6</th>
 					<th id="ipstatus" style="text-align: center;">To China</th>
 					<th id="name">Name</th>
 					<th id="type">Type</th>
-					<th id="host">Host</th>
 					<th id="location">Location</th>
 					<th id="uptime">Uptime</th>
 					<th id="load">Load</th>
