--- a/web/index.html
+++ b/web/index.html
@@ -6,9 +6,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Server Status">
+		<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="css/light.css" title="light">
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="css/dark.css" title="dark">
 		<style>
 			body {
@@ -49,8 +49,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="container announcement">
-			<p><a href="#">Server Status</a> | Some message you want to show.</p>
+      <div class="container announcement">
+		<p><a href="#">Server Status</a> | Some message you want to show.</p>
 		</div>
 		<div class="container content">
 			<div id="loading-notice">
@@ -71,13 +71,16 @@
 				<thead>
 				<tr>
 					<th id="status4" style="text-align: center;">IPv4</th>
-					<th id="ipstatus" style="text-align: center;">To China</th>
+					<th id="status6" style="text-align: center;">IPv6</th>
+					<th id="ip_status" style="text-align: center;">To CN</th>
 					<th id="name">Name</th>
 					<th id="type">Type</th>
+					<th id="host">Host</th>
 					<th id="location">Location</th>
 					<th id="uptime">Uptime</th>
 					<th id="load">Load</th>
 					<th id="network">Network ↓|↑</th>
+                    <th id="traffic">Traffic ↓|↑</th>
 					<th id="cpu">CPU</th>
 					<th id="memory">RAM</th>
 					<th id="hdd">HDD</th>
