--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Server Status</title>
+		<title>Server Status - Powered by CTCGFW - serverstatus-demo.easy-use.ml</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Server Status">
+		<link rel="stylesheet" href="https://fonts.cat.net/css?family=Roboto:300">
 		<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="css/light.css" title="light">
@@ -23,7 +24,7 @@
 		<![endif]-->
 	</head>
 	<body>
-		<div role="navigation" class="navbar navbar-inverse navbar-fixed-top">
+		<div role="navigation" class="navbar navbar-inverse navbar-fixed-top navbar-top">
 			<div class="navbar-inner">
 				<div class="container">
 					<div class="navbar-header">
@@ -33,7 +34,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a href="#" class="navbar-brand">Server Status</a>
+						<a href="#" class="navbar-brand" >Server Status</a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
@@ -79,6 +80,7 @@
 					<th id="location">Location</th>
 					<th id="uptime">Uptime</th>
 					<th id="load">Load</th>
+					<th id="loss">Loss(CU|CT|CM)</th>
 					<th id="network">Network ↓|↑</th>
                     <th id="traffic">Traffic ↓|↑</th>
 					<th id="cpu">CPU</th>
