--- a/web/index.html
+++ b/web/index.html
@@ -80,9 +80,9 @@
 					<th id="location">Location</th>
 					<th id="uptime">Uptime</th>
 					<th id="load">Load</th>
-					<th id="loss">Loss(CU|CT|CM)</th>
+					<th id="loss">Loss(CU|CM|CT)</th>
 					<th id="network">Network ↓|↑</th>
-                    <th id="traffic">Traffic ↓|↑</th>
+					<th id="traffic">Traffic ↓|↑</th>
 					<th id="cpu">CPU</th>
 					<th id="memory">RAM</th>
 					<th id="hdd">HDD</th>
