--- a/web/index.html
+++ b/web/index.html
@@ -50,7 +50,7 @@
 				</div>
 			</div>
 		</div>
-      <div class="container announcement">
+		<div class="container announcement">
 		<p><a href="#">Server Status</a> | Some message you want to show.</p>
 		</div>
 		<div class="container content">
@@ -80,9 +80,10 @@
 					<th id="location">Location</th>
 					<th id="uptime">Uptime</th>
 					<th id="load">Load</th>
-					<th id="loss">Loss(CU|CM|CT)</th>
-					<th id="network">Network ↓|↑</th>
-					<th id="traffic">Traffic ↓|↑</th>
+					<th id="connections">Connections</th>
+					<th id="loss">Loss (CU|CM|CT)</th>
+					<th id="network">Network (↓|↑)</th>
+					<th id="traffic">Traffic (↓|↑)</th>
 					<th id="cpu">CPU</th>
 					<th id="memory">RAM</th>
 					<th id="hdd">HDD</th>
