--- a/web/index.html
+++ b/web/index.html
@@ -79,7 +79,7 @@
 					<th id="host">Host</th>
 					<th id="location">Location</th>
 					<th id="uptime">Uptime</th>
-					<th id="load">Load</th>
+					<th id="load">Load (1|5|15)</th>
 					<th id="connections">Connections</th>
 					<th id="loss">Loss (CU|CM|CT)</th>
 					<th id="network">Network (↓|↑)</th>
