--- a/web/index.html
+++ b/web/index.html
@@ -73,7 +73,7 @@
 				<tr>
 					<th id="status4" style="text-align: center;">IPv4</th>
 					<th id="status6" style="text-align: center;">IPv6</th>
-					<th id="ip_status" style="text-align: center;">TCP to CN</th>
+					<th id="ip_status" style="text-align: center;">To CN</th>
 					<th id="name">Name</th>
 					<th id="type">Type</th>
 					<th id="host">Host</th>
